# cognite-python-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test_and_build.yaml
cognite/utils/: _logging.py
cognite/utils/contextualization/: __init__.py  _entity_match_categorizer.py
cognite/utils/infrastructure/: __init__.py  _cdf_project_archiver.py
docs/: development.html  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js
docs-source/source/: conf.py
docs-source/source/api/: index.rst
docs-source/source/api/infrastructure/: cdf_project_archiver.rst  index.rst
docs-source/source/development/: basics.rst  guidelines.rst
docs-source/source/usage/: index.rst
docs-source/source/usage/contextualization/: index.rst
docs-source/source/usage/infrastructure/: demo_cdf_project_archiver.ipynb
docs/_sources/: development.rst.txt  index.rst.txt  intro.rst.txt
docs/_sources/api/contextualization/: entity_match_categorizer.rst.txt  index.rst.txt
docs/_sources/development/: basics.rst.txt  guidelines.rst.txt  index.rst.txt  setup.rst.txt
docs/_sources/usage/contextualization/: demo_entity_match_categorizer.ipynb.txt
docs/_sources/usage/infrastructure/: index.rst.txt
docs/api/: index.html
docs/api/contextualization/: entity_match_categorizer.html  index.html
docs/api/infrastructure/: cdf_project_archiver.html  index.html
docs/development/: basics.html  covenant.html  guidelines.html  index.html  setup.html
docs/usage/: index.html
docs/usage/contextualization/: demo_entity_match_categorizer.html  index.html
docs/usage/infrastructure/: demo_cdf_project_archiver.html  index.html
tests/tests_unit/: conftest.py
tests/tests_unit/test_contextualization_utils/: test_entity_match_categorizer.py
tests/tests_unit/test_infrastructure_utils/: test_cdf_project_archiver.py
