[tool.poetry]
name = "cognite-utils"
version = "0.1.1"
description = "Python Utilities Extending the Use of Cognite Products"
authors = [
    "Sangyoon Park <sangyoon.park@cognite.com>",
    "Cole Howard <cole.howard@cognite.com>",
    "Viet Le <viet.le@cognite.com>"
]
readme = "README.md"
homepage = "https://cognitedata.github.io/cognite-python-utils/"
repository = "https://github.com/cognitedata/cognite-python-utils"
license = "Apache-2.0"
packages = [
    { include = "cognite" }
]
[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
nbsphinx = "^0.8.10"
ipython = "^8.7.0"


[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry.dependencies]
python = "^3.8"
cognite-sdk = "^4.11.3"
numpy = "^1.23.5"
pandas = "^1.5.2"
cognite-sdk-experimental = "^0.107.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
